[project]
name = "hak-saucerswap-plugin"
version = "0.1.0"
description = "Hedera Agent Kit (Python) plugin for SaucerSwap DEX: quotes, swaps, liquidity, pools, and farms"
authors = [{ name = "Juan Gomez", email = "juanmag.lpez@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.14"
keywords = ["hedera", "hashgraph", "saucerswap", "dex", "agent", "ai", "hedera-agent-kit"]
dependencies = [
    "hedera-agent-kit>=3.4.2,<4",
    "hiero-sdk-python>=0.2.0,<0.3",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.urls]
Repository = "https://github.com/jmgomezl/hak-saucerswap-plugin-py"
Documentation = "https://github.com/jmgomezl/hak-saucerswap-plugin-py#readme"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hak_saucerswap_plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
